@@ -1,19 +1,18 @@
 # This is a utility DAG to conduct QA on real time data download
 # DAG task downloads data for last N minutes in one batch
 
-import copy
 import datetime
-import os
-from itertools import product
-
 import airflow
 from airflow.contrib.operators.ecs_operator import ECSOperator
-from airflow.models import Variable
 from airflow.operators.dummy_operator import DummyOperator
+from airflow.models import Variable
+from itertools import product
+import copy
+import os
 
 _FILENAME = os.path.basename(__file__)
 
-# This variable will be propagated throughout DAG definition as a prefix to
+# This variable will be propagated throughout DAG definition as a prefix to 
 # names of Airflow configuration variables, allow to switch from test to preprod/prod
 # in one line (in best case scenario).
 _STAGE = _FILENAME.split(".")[0]
@@ -29,16 +28,14 @@ _LAUNCH_TYPE = "fargate"
 assert _LAUNCH_TYPE in ["ec2", "fargate"]
 
 _DAG_ID = _FILENAME.rsplit(".", 1)[0]
-_EXCHANGES = ["binance"]
+_EXCHANGES = ["binance"] 
 _PROVIDERS = ["crypto_chassis"]
-_UNIVERSES = {"crypto_chassis": "v2"}
+_UNIVERSES = { "crypto_chassis": "v2"}
 _CONTRACTS = ["spot", "futures"]
 _DATA_TYPES = ["bid_ask"]
-_DAG_DESCRIPTION = (
-    f"Daily {_DATA_TYPES} data download, contracts:"
-    + f"{_CONTRACTS}, using {_PROVIDERS} from {_EXCHANGES}."
-)
-_SCHEDULE = Variable.get(f"{_DAG_ID}_schedule")
+_DAG_DESCRIPTION = f"Daily {_DATA_TYPES} data download, contracts:" \
+                + f"{_CONTRACTS}, using {_PROVIDERS} from {_EXCHANGES}."
+_SCHEDULE = Variable.get(f'{_DAG_ID}_schedule')
 
 # Used for container overrides inside DAG task definition.
 # If this is a test DAG don't forget to add your username to container suffix.
@@ -49,24 +46,27 @@ _CONTAINER_SUFFIX = f"-{_STAGE}" if _STAGE in ["preprod", "test"] else ""
 _CONTAINER_SUFFIX += f"-{_USERNAME}" if _STAGE == "test" else ""
 _CONTAINER_NAME = f"cmamp{_CONTAINER_SUFFIX}"
 
-ecs_cluster = Variable.get(f"{_STAGE}_ecs_cluster")
+ecs_cluster = Variable.get(f'{_STAGE}_ecs_cluster')
 # The naming convention is set such that this value is then reused
-# in log groups, stream prefixes and container names to minimize
+# in log groups, stream prefixes and container names to minimize 
 # convolution and maximize simplicity.
 ecs_task_definition = _CONTAINER_NAME
 
-# Subnets and security group is not needed for EC2 deployment but
+# Subnets and security group is not needed for EC2 deployment but 
 # we keep the configuration header unified for convenience/reusability.
 ecs_subnets = [Variable.get("ecs_subnet1"), Variable.get("ecs_subnet2")]
 ecs_security_group = [Variable.get("ecs_security_group")]
 ecs_awslogs_group = f"/ecs/{ecs_task_definition}"
 ecs_awslogs_stream_prefix = f"ecs/{ecs_task_definition}"
-s3_daily_staged_data_path = f"s3://{Variable.get(f'{_STAGE}_s3_data_bucket')}/{Variable.get('s3_daily_staged_ohlcv_data_folder')}"
+s3_daily_staged_data_path = f"s3://{Variable.get(f'{_STAGE}_s3_data_bucket')}/{Variable.get('s3_daily_staged_data_bid_ask_folder')}"
 
 # Pass default parameters for the DAG.
 default_args = {
     "retries": 1,
-    "email": [Variable.get(f"{_STAGE}_notification_email")],
+    # CryptoChassis might throw 
+    # too many request error, wait a couple min to retry.
+    "retry_delay": datetime.timedelta(minutes=5),
+    "email": [Variable.get(f'{_STAGE}_notification_email')],
     "email_on_failure": True if _STAGE in ["prod", "preprod"] else False,
     "email_on_retry": False,
     "owner": "airflow",
@@ -84,29 +84,27 @@ dag = airflow.DAG(
 )
 
 download_command = [
-    "/app/im_v2/{}/data/extract/download_historical_data.py",
-    "--end_timestamp '{{ execution_date + macros.timedelta(minutes=1440) }}'",
-    "--start_timestamp '{{ execution_date }}'",
-    "--exchange_id '{}'",
-    "--universe '{}'",
-    "--aws_profile 'ck'",
-    "--data_type '{}'",
-    "--file_format 'parquet'",
-    # The command needs to be executed manually first because --incremental
-    # assumes appending to existing folder.
-    "--incremental",
-    "--contract_type '{}'",
-    "--s3_path '{}{}/{}'",
+    "/app/amp/im_v2/{}/data/extract/download_historical_data.py",
+     "--end_timestamp '{{ execution_date + macros.timedelta(minutes=1440) }}'",
+     "--start_timestamp '{{ execution_date }}'",
+     "--exchange_id '{}'",
+     "--universe '{}'",
+     "--aws_profile 'ck'",
+     "--data_type '{}'",
+     "--file_format 'parquet'",
+     # The command needs to be executed manually first because --incremental 
+     # assumes appending to existing folder.
+     "--incremental",
+     "--contract_type '{}'",
+     "--s3_path '{}{}/{}'"
 ]
 
-start_task = DummyOperator(task_id="start_dag", dag=dag)
-end_download = DummyOperator(task_id="end_dag", dag=dag)
+start_task = DummyOperator(task_id='start_dag', dag=dag)
+end_download = DummyOperator(task_id='end_dag', dag=dag)
 
-for provider, exchange, contract, data_type in product(
-    _PROVIDERS, _EXCHANGES, _CONTRACTS, _DATA_TYPES
-):
+for provider, exchange, contract, data_type in product(_PROVIDERS, _EXCHANGES, _CONTRACTS, _DATA_TYPES):
 
-    # TODO(Juraj): Make this code more readable.
+    #TODO(Juraj): Make this code more readable.
     # Do a deepcopy of the bash command list so we can reformat params on each iteration.
     curr_bash_command = copy.deepcopy(download_command)
     curr_bash_command[0] = curr_bash_command[0].format(provider)
@@ -118,9 +116,9 @@ for provider, exchange, contract, data_type in product(
         s3_daily_staged_data_path,
         # For futures we need to suffix the folder.
         "-futures" if contract == "futures" else "",
-        provider,
+        provider
     )
-
+    
     kwargs = {}
     kwargs["network_configuration"] = {
         "awsvpcConfiguration": {
@@ -128,7 +126,7 @@ for provider, exchange, contract, data_type in product(
             "subnets": ecs_subnets,
         },
     }
-
+    
     downloading_task = ECSOperator(
         task_id=f"download_{provider}_{exchange}_{contract}",
         dag=dag,
@@ -142,12 +140,15 @@ for provider, exchange, contract, data_type in product(
                     "name": _CONTAINER_NAME,
                     "command": curr_bash_command,
                 }
-            ]
+            ],
+            # For uknown reason bid-ask task needs more resources.
+            "cpu": "512",
+            "memory": "1024"
         },
         awslogs_group=ecs_awslogs_group,
         awslogs_stream_prefix=ecs_awslogs_stream_prefix,
         execution_timeout=datetime.timedelta(minutes=15),
-        **kwargs,
+        **kwargs
     )
-
+    
     start_task >> downloading_task >> end_download
